[package]
name = "gpt-comments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
openai-api-rs = "4.0.7"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20.0"
tree-sitter-python = "0.20.4"
tree-sitter-rust = "0.20.4"
tree-sitter-sql = { git = "https://github.com/m-novikov/tree-sitter-sql.git", version = "0.0.2" }
